# gb_dialog

./: .gitignore  README.md  gb_dialog.repos  gb_dialog_requirements.repos
dialog_gui/: CMakeLists.txt  dialog_gui_requirements.repos  package.xml
dialog_gui/launch/: rosbridge_websocket.launch
dialog_gui/src/: index.html
dialog_gui/src/css/: index.css
gb_dialog/: CMakeLists.txt  package.xml
gb_dialog/credentials/: df_key.json
gb_dialog/include/gb_dialog/: DialogInterface.h  DialogInterface.hpp
gb_dialog/launch/: bica_dialog_services.launch  bica_dialog_services_soundplay.launch  gb_dialog_services_soundplay.launch  gb_dialog_services_soundplay.launch.py
gb_dialog/src/: DialogInterface.cpp
gb_dialog/src/example/: exampleDF.cpp
gb_dialog/test/: test_DialogInterface.cpp  test_DialogInterface.launch
graph_dialog_extractor/: CMakeLists.txt  package.xml
graph_dialog_extractor/include/graph_dialog_extractor/: byeDF_lib.h  confirmOrderDF_lib.h  confirmationDF_lib.h  floorDF_lib.h  graph_dialog_extractor_node.h  helloDF_lib.h  orderDF_lib.h  orderReadyDF_lib.h  startDF_lib.h
graph_dialog_extractor/launch/: graph_dialog_extractor.launch  graph_dialog_extractor_alone.launch
graph_dialog_extractor/src/: graph_dialog_extractor_node.cpp  test_graph_dialog_extractor.cpp
graph_dialog_extractor/src/libs/: byeDF_lib.cpp  confirmOrderDF_lib.cpp  confirmationDF_lib.cpp  floorDF_lib.cpp  helloDF_lib.cpp  orderDF_lib.cpp  orderReadyDF_lib.cpp  startDF_lib.cpp
