<?xml version="1.0"?>
<package format="1">
  <name>gb_dialog</name>
  <version>0.0.1</version>
  <description>The gb_dialog package. Interface to helping in the dialog process using Google Speech and DialogFlow</description>
  <maintainer email="jginesclavero@gmail.com">Jonatan Gines Clavero</maintainer>
  <license>BSD</license>
  <author email="jginesclavero@gmail.com">Jonatan Gines Clavero</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dialogflow_ros_msgs</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>sound_play</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dialogflow_ros_msgs</run_depend>
  <run_depend>sound_play</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>


  <export>

  </export>
</package>
