<?xml version="1.0"?>
<package format="3">
  <name>gb_dialog</name>
  <version>0.0.1</version>
  <description>The gb_dialog package. Interface to helping in the dialog process using Google Speech and DialogFlow</description>
  <maintainer email="jginesclavero@gmail.com">Jonatan Gines Clavero</maintainer>
  <license>BSD</license>
  <author email="jginesclavero@gmail.com">Jonatan Gines Clavero</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>actionlib</depend>
  <depend>sound_play</depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>dialogflow_ros_interfaces</build_depend>
  <build_depend>roslint</build_depend>

  <exec_depend>ros2run</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>dialogflow_ros_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
